syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "ConsultaPixGrpc";

package br.com.zup;

import "google/protobuf/timestamp.proto";

service ConsultaPixService {

  rpc consultaPix(ConsultaPixRequest) returns (ConsultaPixResponse) {}
}

message ConsultaPixRequest {
  message FiltroPorPixId {
    string pixId = 1;
    string clienteId = 2;
  }

  oneof filtro {
    FiltroPorPixId pixId = 1;
    string chave         = 2;
  }
}

message ConsultaPixResponse {
  message ChavePix {
    message ContaInfo {
      string tipoDaConta     = 1;
      string instituicao     = 2;
      string nomeDoTitular   = 3;
      string cpfDoTitular    = 4;
      string agencia         = 5;
      string numeroDaConta   = 6;
    }

    string tipoDaChave = 1;
    string chave            = 2;
    ContaInfo conta         = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  string pixId     = 2;
  ChavePix chave   = 3;

}